# gfxlib-rs

./: Cargo.toml  README.md
src/: assets.rs  core.rs  gfx.rs  graphics.rs  lib.rs  math.rs  shader.rs  utils.rs
src/core/: entity.rs  sprite.rs  transform.rs
src/graphics/: camera.rs  font.rs  game_window.rs  image_texture.rs  light.rs  material.rs  mesh.rs  render_device.rs  render_target.rs  shapes.rs  sprite_sheet.rs  spritesheet.rs  viewport.rs
src/shader/: prebuild_shader.rs
